fix(260406-raw): move hamburger to MenuMobile bottom bar, hide from header on mobile

--- a/apps/dashboard/app/scss/components/_header.scss
+++ b/apps/dashboard/app/scss/components/_header.scss
@@ -59,7 +59,6 @@
       }
 
       @include screen-small {
-        justify-content: flex-start;
         padding: 0 16px;
 
         &__left {
